portfolio/src/App.css
/********** Global App Styling **********/

.center {
  text-align: center;
}

/*Add space above and below the heading on the About Component*/
.rowWhiteSpace {
  margin-top: 10px;
  margin-bottom: 10px;
}

.appBackGroundColor {
  background-color: #eee9e9;
}

/********** End of Global App Styling **********/


/********** Nav Component Styling **********/
.navSection {
  background-color: navy;
  display: flex; /* Affect content of this container*/
  align-items: center; /*Center the content on the x axis*/
  justify-content: space-around; /*Center the content on the y axis*/ 
  margin-bottom: 50px;
}

.navButton {
  color: white;
}

/********** End of Nav Component Styling **********/

/********** Intro Component Styling **********/

/*Style for the entire Intro Container*/
.introContainer {
  min-height: 80vh; /*made the container the height of the screen window*/

}

/*Style for the text content in Intro*/
.introTitle {
  text-align: center;
  color: white;
  z-index: 1;
}

/*
Bug fix: Was using a dark overlay and z-index for text to darken image but show text on top but it 
really wasn't working. The fix was to use a linear-gradient. 
*/
.introImage {
  background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url(./img/intro_meetup.jpg);
  background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url(./img/intro_meetup.jpg);
  background-size: cover;
  background-position: center center;
  overflow: hidden;
  background-attachment: fixed;
  display: flex; /* Affect content of this container*/
  align-items: center; /*Center the content on the x axis*/
  justify-content: center; /*Center the content on the y axis*/  
}

@media only screen and (max-width:425px){
  .showMobileImage {
    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url(./img/meetup-me-standing-small.jpg);
  }
}

.introTitle > h1 , .introTitle > h3, .introTitle > h5 {
  margin-bottom: 8vh ;
}

/********** End Intro Component Styling **********/


/********** About Component Styling **********/

/*Style for Sub-Title on About Component*/
.greyColor {
  color: grey;
  margin-bottom: 10px;
}

/********** End of About Component Styling **********/


/********** Portfolio Component Styling **********/
.spaceBetweenPortfolioCards {
  margin-bottom: 2vh;
}

.equalTitleHeight {
  height: 10vh;
  display:flex;
  justify-content: center;
  align-items: center;
}

.equalImgHeight {
  height: 30vh;
}

.equalTechHeight {
  height: 20vh;
}

.equalObjHeight {
  height: 15vh;
}

@media screen and (max-width:1024px) and (min-width:768px){
  .equalTechHeight {
    height: 25vh;
  }
  
  .equalObjHeight {
    height: 25vh;
  }
}
/********** End of Portfolio Component Styling **********/

/********** Start of Case Studies Component Styling **********/

/********** End of Case Studies Component Styling **********/

